cmake_minimum_required(VERSION 3.9)
project(codeforces)

enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(root_dir ${CMAKE_SOURCE_DIR}/..)
set(common_dir ${root_dir}/common)
set(common_lib_dir ${common_dir}/lib)
set(src_dir ${CMAKE_SOURCE_DIR})
set(solvers_dir ${CMAKE_SOURCE_DIR}/Solvers)
set(algo_dir ${CMAKE_SOURCE_DIR}/algo)
set(launcher_dir ${CMAKE_SOURCE_DIR}/Launcher)

include(${common_dir}/external/CMakeLists.txt)

add_library(algo_lib INTERFACE)
target_sources(algo_lib INTERFACE
    ${algo_dir}/algebra/cyclic_convolution.h
    ${algo_dir}/algebra/quadratic/solve_quadratic_real.h
    ${algo_dir}/binary_cube_prefix.h
    ${algo_dir}/segment_tree/binary_functors/first_argument.h
    ${algo_dir}/segment_tree/binary_functors/max.h
    ${algo_dir}/segment_tree/binary_functors/min.h
    ${algo_dir}/binary_search.h
    ${algo_dir}/bits/full_binary_trie.h
    ${algo_dir}/borrower.h
    ${algo_dir}/disjoint_set.h
    ${algo_dir}/dynamic_programming_processor.h
    ${algo_dir}/functor_iterator.h
    ${algo_dir}/combinatorics/combinatorics_helper.h
    ${algo_dir}/geometry/angle_sort.h
    ${algo_dir}/geometry/convexhull.h
    ${algo_dir}/geometry/geomvector.h
    ${algo_dir}/geometry/linear_functions_max.h
    ${algo_dir}/graph/bipartition_checker.h
    ${algo_dir}/graph/complement.h
    ${algo_dir}/graph/connected_components_decomposer.h
    ${algo_dir}/graph/dijkstra.h
    ${algo_dir}/graph/has_cycle.h
    ${algo_dir}/graph/max_clique.h
    ${algo_dir}/graph/max_flow_push_relabel.h
    ${algo_dir}/graph/rooted_graph.h
    ${algo_dir}/graph/tree_preprocessor.h
    ${algo_dir}/indicator.h
    ${algo_dir}/io/baseio.h
    ${algo_dir}/io/printvector.h
    ${algo_dir}/io/readvector.h
    ${algo_dir}/maximal_increasing_subsequence.h
    ${algo_dir}/number_theory/big_integer.h
    ${algo_dir}/number_theory/coprimes.h
    ${algo_dir}/number_theory/divisors.h
    ${algo_dir}/number_theory/greatest_common_divisor.h
    ${algo_dir}/number_theory/group_order.h
    ${algo_dir}/number_theory/number_of_divisors.h
    ${algo_dir}/number_theory/primary_root.h
    ${algo_dir}/number_theory/primes.h
    ${algo_dir}/number_theory/residue.h
    ${algo_dir}/number_theory/sum_of_divisors.h
    ${algo_dir}/ordered_set.h
    ${algo_dir}/polynomial/fast_fourier_transform.h
    ${algo_dir}/polynomial/fast_multiplication.h
    ${algo_dir}/polynomial/polynomial.h
    ${algo_dir}/query/mo_query_processor.h
    ${algo_dir}/query/order_independent_slider.h
    ${algo_dir}/segment_tree/segment_tree.h
    ${algo_dir}/sliding_window_min_finder.h
    ${algo_dir}/sort_by.h
    ${algo_dir}/sort_with_mapping.h
    ${algo_dir}/strings/find_occurences.h
    ${algo_dir}/strings/knutt_morris_pratt.h
    ${algo_dir}/strings/suffix_automaton.h
    ${algo_dir}/strings/trie.h
    ${algo_dir}/segment_tree/update_appliers/id_applier.h
    ${algo_dir}/segment_tree/update_appliers/increase_by_idempotent.h
    ${algo_dir}/segment_tree/update_appliers/increase_by_sum.h
    ${algo_dir}/segment_tree/update_appliers/linear_transform_idempotent.h
    ${algo_dir}/segment_tree/update_appliers/multiply_by_applier.h
    ${algo_dir}/segment_tree/update_appliers/set_to_idempotent.h
    ${algo_dir}/segment_tree/update_appliers/set_to_plus.h
    ${algo_dir}/segment_tree/update_appliers/update_applier.h
    ${algo_dir}/segment_tree/update_types/id.h
    ${algo_dir}/segment_tree/update_types/increase_by.h
    ${algo_dir}/segment_tree/update_types/linear_transform.h
    ${algo_dir}/segment_tree/update_types/multiply_by.h
    ${algo_dir}/segment_tree/update_types/set_to.h
    )

set(algo_tests_srcs
    ${algo_dir}/gtest_main.cpp
    ${algo_dir}/algebra/cyclic_convolution_test.cpp
    ${algo_dir}/algebra/quadratic/solve_quadratic_test.cpp
    ${algo_dir}/bits/full_binary_trie_test.cpp
    ${algo_dir}/combinatorics/combinatorics_helper_test.cpp
    ${algo_dir}/geometry/angle_sort_test.cpp
    ${algo_dir}/geometry/convex_hull_test.cpp
    ${algo_dir}/geometry/geomvector_test.cpp
    ${algo_dir}/geometry/linear_functions_max_test.cpp
    ${algo_dir}/graph/bipartition_checker_test.cpp
    ${algo_dir}/graph/complement_test.cpp
    ${algo_dir}/graph/connected_components_decomposer_test.cpp
    ${algo_dir}/graph/graph_helper.cpp
    ${algo_dir}/graph/has_cycle_test.cpp
    ${algo_dir}/graph/max_flow_push_relabel_test.cpp
    ${algo_dir}/graph/max_clique_test.cpp
    ${algo_dir}/graph/rooted_graph_test.cpp
    ${algo_dir}/graph/tree_preprocessor_test.cpp
    ${algo_dir}/number_theory/big_integer_test.cpp
    ${algo_dir}/number_theory/coprime_test.cpp
    ${algo_dir}/number_theory/divisors_test.cpp
    ${algo_dir}/number_theory/greatest_common_divisor_test.cpp
    ${algo_dir}/number_theory/primary_root_test.cpp
    ${algo_dir}/number_theory/primes_test.cpp
    ${algo_dir}/number_theory/residue_test.cpp
    ${algo_dir}/polynomial/polynomial_test.cpp
    ${algo_dir}/polynomial/fast_fourier_transform_test.cpp
    ${algo_dir}/strings/trie_test.cpp
    ${algo_dir}/strings/find_occurences_test.cpp
    ${algo_dir}/strings/knutt_morris_pratt_test.cpp
    ${algo_dir}/strings/suffix_automaton_test.cpp
    ${algo_dir}/query/mo_query_processor_test.cpp
    ${algo_dir}/borrower_test.cpp
    ${algo_dir}/binary_cube_prefix_test.cpp
    ${algo_dir}/binary_search_test.cpp
    ${algo_dir}/disjoint_set_test.cpp
    ${algo_dir}/dynamic_programming_processor_test.cpp
    ${algo_dir}/functor_iterator_test.cpp
    ${algo_dir}/indicator_test.cpp
    ${algo_dir}/maximal_increasing_subsequence_test.cpp
    ${algo_dir}/ordered_set_test.cpp
    ${algo_dir}/segment_tree/segment_tree_test.cpp
    ${algo_dir}/sliding_window_min_finder_test.cpp
)

add_executable(algo_tests ${algo_tests_srcs})
target_link_libraries(algo_tests gtest gmock algo_lib)

add_test(algo_tests algo_tests)

add_library(solver_testing_utils INTERFACE)
target_sources(solver_testing_utils INTERFACE
    ${common_dir}/tools/fuser/fuser.cpp
    ${common_dir}/tools/fuser/file_parser.cpp
    ${launcher_dir}/main.cpp
    ${launcher_dir}/CodeFuser.h
    ${launcher_dir}/CodeFuser.cpp
    ${launcher_dir}/CodeFuserTest.cpp
    ${solvers_dir}/pch.cpp
    ${solvers_dir}/SolverStub.cpp
    ${solvers_dir}/testutils/ProblemTest.cpp    
)

set(tests_srcs
    ${solvers_dir}/0xx/014/Solver014D.cpp
    ${solvers_dir}/0xx/022/Solver022B.cpp
    ${solvers_dir}/0xx/067/Solver067A.cpp
    ${solvers_dir}/0xx/071/Solver071C.cpp
    ${solvers_dir}/0xx/074/Solver074B.cpp
    ${solvers_dir}/0xx/079/Solver079C.cpp
    ${solvers_dir}/10xx/1091/Solver1091A.cpp
    ${solvers_dir}/10xx/1091/Solver1091B.cpp
    ${solvers_dir}/10xx/1091/Solver1091C.cpp
    ${solvers_dir}/10xx/1091/Solver1091D.cpp
    ${solvers_dir}/10xx/1097/Solver1097A.cpp
    ${solvers_dir}/10xx/1097/Solver1097B.cpp
    ${solvers_dir}/10xx/1097/Solver1097C.cpp
    ${solvers_dir}/10xx/1097/Solver1097D.cpp
    ${solvers_dir}/10xx/1098/Solver1098A.cpp
    ${solvers_dir}/10xx/1098/Solver1098B.cpp
    ${solvers_dir}/11xx/1100/Solver1100A.cpp
    ${solvers_dir}/11xx/1100/Solver1100B.cpp
    ${solvers_dir}/11xx/1100/Solver1100C.cpp
    ${solvers_dir}/11xx/1100/Solver1100D.cpp
    ${solvers_dir}/11xx/1100/Solver1100E.cpp
    ${solvers_dir}/11xx/1101/Solver1101A.cpp
    ${solvers_dir}/11xx/1101/Solver1101B.cpp
    ${solvers_dir}/11xx/1101/Solver1101C.cpp
    ${solvers_dir}/11xx/1101/Solver1101D.cpp
    ${solvers_dir}/11xx/1101/Solver1101E.cpp
    ${solvers_dir}/11xx/1102/Solver1102A.cpp
    ${solvers_dir}/11xx/1102/Solver1102B.cpp
    ${solvers_dir}/11xx/1102/Solver1102C.cpp
    ${solvers_dir}/11xx/1102/Solver1102D.cpp
    ${solvers_dir}/11xx/1102/Solver1102E.cpp
    ${solvers_dir}/11xx/1103/Solver1103A.cpp
    ${solvers_dir}/11xx/1103/Solver1103B.cpp
    ${solvers_dir}/11xx/1105/Solver1105A.cpp
    ${solvers_dir}/11xx/1105/Solver1105B.cpp
    ${solvers_dir}/11xx/1105/Solver1105C.cpp
    ${solvers_dir}/11xx/1105/Solver1105D.cpp
    ${solvers_dir}/11xx/1105/Solver1105E.cpp
    ${solvers_dir}/11xx/1106/Solver1106A.cpp
    ${solvers_dir}/11xx/1106/Solver1106B.cpp
    ${solvers_dir}/11xx/1106/Solver1106C.cpp
    ${solvers_dir}/11xx/1106/Solver1106D.cpp
    ${solvers_dir}/11xx/1106/Solver1106E.cpp
    ${solvers_dir}/11xx/1107/Solver1107A.cpp
    ${solvers_dir}/11xx/1107/Solver1107B.cpp
    ${solvers_dir}/11xx/1107/Solver1107C.cpp
    ${solvers_dir}/11xx/1107/Solver1107D.cpp
    ${solvers_dir}/11xx/1109/Solver1109A.cpp
    ${solvers_dir}/11xx/1109/Solver1109B.cpp
    ${solvers_dir}/11xx/1109/Solver1109D.cpp
    ${solvers_dir}/11xx/1111/Solver1111A.cpp
    ${solvers_dir}/11xx/1111/Solver1111B.cpp
    ${solvers_dir}/11xx/1111/Solver1111C.cpp
    ${solvers_dir}/11xx/1129/Solver1129A.cpp
    ${solvers_dir}/11xx/1129/Solver1129B.cpp
    ${solvers_dir}/13xx/1363/Solver1363A.cpp
    ${solvers_dir}/13xx/1363/Solver1363B.cpp
    ${solvers_dir}/13xx/1363/Solver1363C.cpp
    ${solvers_dir}/13xx/1363/Solver1363E.cpp
    ${solvers_dir}/16xx/1632/Solver1632A.cpp
    ${solvers_dir}/16xx/1632/Solver1632B.cpp
    ${solvers_dir}/16xx/1637/Solver1637A.cpp
    ${solvers_dir}/16xx/1637/Solver1637B.cpp
    ${solvers_dir}/16xx/1637/Solver1637C.cpp
    ${solvers_dir}/16xx/1637/Solver1637D.cpp
    ${solvers_dir}/16xx/1637/Solver1637E.cpp
    ${solvers_dir}/16xx/1644/Solver1644A.cpp
    ${solvers_dir}/16xx/1644/Solver1644B.cpp
    ${solvers_dir}/16xx/1644/Solver1644C.cpp
    ${solvers_dir}/16xx/1644/Solver1644D.cpp
    ${solvers_dir}/1xx/107/Solver107B.cpp
    ${solvers_dir}/1xx/132/Solver132C.cpp
    ${solvers_dir}/1xx/158/Solver158E.cpp
    ${solvers_dir}/1xx/163/Solver163A.cpp
    ${solvers_dir}/2xx/208/Solver208B.cpp
    ${solvers_dir}/2xx/245/Solver245H.cpp
    ${solvers_dir}/2xx/264/Solver264C.cpp
    ${solvers_dir}/2xx/292/Solver292D.cpp
    ${solvers_dir}/3xx/316/Solver316B.cpp
    ${solvers_dir}/3xx/319/Solver319C.cpp
    ${solvers_dir}/3xx/321/Solver321B.cpp
    ${solvers_dir}/3xx/346/Solver346B.cpp
    ${solvers_dir}/3xx/351/Solver351B.cpp
    ${solvers_dir}/3xx/354/Solver354C.cpp
    ${solvers_dir}/3xx/358/Solver358D.cpp
    ${solvers_dir}/3xx/372/Solver372B.cpp
    ${solvers_dir}/3xx/377/Solver377A.cpp
    ${solvers_dir}/3xx/377/Solver377B.cpp
    ${solvers_dir}/3xx/377/Solver377C.cpp
    ${solvers_dir}/3xx/377/Solver377D.cpp
    ${solvers_dir}/3xx/377/Solver377E.cpp
    ${solvers_dir}/3xx/374/Solver374C.cpp
    ${solvers_dir}/3xx/379/Solver379D.cpp
    ${solvers_dir}/4xx/401/Solver401D.cpp
    ${solvers_dir}/4xx/402/Solver402D.cpp
    ${solvers_dir}/4xx/417/Solver417A.cpp
    ${solvers_dir}/4xx/427/Solver427A.cpp
    ${solvers_dir}/4xx/427/Solver427B.cpp
    ${solvers_dir}/4xx/427/Solver427C.cpp
    ${solvers_dir}/4xx/427/Solver427D.cpp
    ${solvers_dir}/4xx/431/Solver431D.cpp
    ${solvers_dir}/4xx/432/Solver432D.cpp
    ${solvers_dir}/4xx/448/Solver448A.cpp
    ${solvers_dir}/4xx/448/Solver448B.cpp
    ${solvers_dir}/4xx/448/Solver448C.cpp
    ${solvers_dir}/4xx/448/Solver448D.cpp
    ${solvers_dir}/4xx/448/Solver448E.cpp
    ${solvers_dir}/4xx/464/Solver464C.cpp
    ${solvers_dir}/4xx/468/Solver468A.cpp
    ${solvers_dir}/4xx/468/Solver468B.cpp
    ${solvers_dir}/4xx/474/Solver474E.cpp
    ${solvers_dir}/4xx/476/Solver476C.cpp
    ${solvers_dir}/4xx/476/Solver476D.cpp
    ${solvers_dir}/4xx/476/Solver476E.cpp
    ${solvers_dir}/4xx/482/Solver482A.cpp
    ${solvers_dir}/4xx/482/Solver482B.cpp
    ${solvers_dir}/4xx/482/Solver482D.cpp
    ${solvers_dir}/4xx/484/Solver484A.cpp
    ${solvers_dir}/4xx/484/Solver484B.cpp
    ${solvers_dir}/4xx/484/Solver484C.cpp
    ${solvers_dir}/4xx/484/Solver484D.cpp
    ${solvers_dir}/4xx/486/Solver486D.cpp
    ${solvers_dir}/4xx/487/Solver487B.cpp
    ${solvers_dir}/4xx/487/Solver487D.cpp
    ${solvers_dir}/4xx/489/Solver489F.cpp
    ${solvers_dir}/4xx/494/Solver494A.cpp
    ${solvers_dir}/4xx/494/Solver494B.cpp
    ${solvers_dir}/4xx/496/Solver496C.cpp
    ${solvers_dir}/4xx/496/Solver496D.cpp
    ${solvers_dir}/4xx/496/Solver496E.cpp
    ${solvers_dir}/4xx/497/Solver497D.cpp
    ${solvers_dir}/4xx/498/Solver498A.cpp
    ${solvers_dir}/4xx/498/Solver498B.cpp
    ${solvers_dir}/4xx/498/Solver498C.cpp
    ${solvers_dir}/4xx/498/Solver498D.cpp
    ${solvers_dir}/5xx/500/Solver500A.cpp
    ${solvers_dir}/5xx/500/Solver500B.cpp
    ${solvers_dir}/5xx/500/Solver500C.cpp
    ${solvers_dir}/5xx/500/Solver500D.cpp
    ${solvers_dir}/5xx/505/Solver505C.cpp
    ${solvers_dir}/5xx/507/Solver507E.cpp
    ${solvers_dir}/5xx/509/Solver509C.cpp
    ${solvers_dir}/5xx/510/Solver510E.cpp
    ${solvers_dir}/5xx/524/Solver524B.cpp
    ${solvers_dir}/5xx/546/Solver546E.cpp
    ${solvers_dir}/5xx/533/Solver533E.cpp
    ${solvers_dir}/5xx/538/Solver538E.cpp
    ${solvers_dir}/5xx/552/Solver552E.cpp
    ${solvers_dir}/5xx/553/Solver553D.cpp
    ${solvers_dir}/5xx/554/Solver554A.cpp
    ${solvers_dir}/5xx/554/Solver554B.cpp
    ${solvers_dir}/5xx/554/Solver554C.cpp
    ${solvers_dir}/5xx/554/Solver554D.cpp
    ${solvers_dir}/5xx/554/Solver554E.cpp
    ${solvers_dir}/5xx/559/Solver559A.cpp
    ${solvers_dir}/5xx/559/Solver559B.cpp
    ${solvers_dir}/5xx/559/Solver559C.cpp
    ${solvers_dir}/5xx/566/Solver566F.cpp
    ${solvers_dir}/5xx/567/Solver567A.cpp
    ${solvers_dir}/5xx/567/Solver567B.cpp
    ${solvers_dir}/5xx/567/Solver567C.cpp
    ${solvers_dir}/5xx/567/Solver567D.cpp
    ${solvers_dir}/5xx/567/Solver567E.cpp
    ${solvers_dir}/5xx/568/Solver568B.cpp
    ${solvers_dir}/5xx/571/Solver571B.cpp
    ${solvers_dir}/5xx/573/Solver573A.cpp
    ${solvers_dir}/5xx/573/Solver573B.cpp
    ${solvers_dir}/5xx/576/Solver576A.cpp
    ${solvers_dir}/5xx/576/Solver576B.cpp
    ${solvers_dir}/5xx/576/Solver576C.cpp
    ${solvers_dir}/5xx/578/Solver578A.cpp
    ${solvers_dir}/5xx/578/Solver578B.cpp
    ${solvers_dir}/5xx/579/Solver579A.cpp
    ${solvers_dir}/5xx/579/Solver579B.cpp
    ${solvers_dir}/5xx/580/Solver580A.cpp
    ${solvers_dir}/5xx/580/Solver580B.cpp
    ${solvers_dir}/5xx/580/Solver580C.cpp
    ${solvers_dir}/5xx/580/Solver580D.cpp
    ${solvers_dir}/5xx/581/Solver581A.cpp
    ${solvers_dir}/5xx/581/Solver581B.cpp
    ${solvers_dir}/5xx/581/Solver581C.cpp
    ${solvers_dir}/5xx/581/Solver581D.cpp
    ${solvers_dir}/5xx/582/Solver582A.cpp
    ${solvers_dir}/5xx/582/Solver582B.cpp
    ${solvers_dir}/5xx/582/Solver582C.cpp
    ${solvers_dir}/5xx/582/Solver582E.cpp
    ${solvers_dir}/5xx/587/Solver587A.cpp
    ${solvers_dir}/5xx/587/Solver87C.cpp
    ${solvers_dir}/5xx/590/Solver590A.cpp
    ${solvers_dir}/5xx/590/Solver590B.cpp
    ${solvers_dir}/5xx/590/Solver590C.cpp
    ${solvers_dir}/5xx/592/Solver592D.cpp
    ${solvers_dir}/5xx/594/Solver594A.cpp
    ${solvers_dir}/5xx/594/Solver594C.cpp
    ${solvers_dir}/5xx/596/Solver596A.cpp
    ${solvers_dir}/5xx/596/Solver596B.cpp
    ${solvers_dir}/5xx/596/Solver596C.cpp
    ${solvers_dir}/5xx/597/Solver597B.cpp
    ${solvers_dir}/5xx/598/Solver598A.cpp
    ${solvers_dir}/5xx/598/Solver598E.cpp
    ${solvers_dir}/5xx/599/Solver599D.cpp
    ${solvers_dir}/6xx/600/Solver600A.cpp
    ${solvers_dir}/6xx/600/Solver600B.cpp
    ${solvers_dir}/6xx/600/Solver600C.cpp
    ${solvers_dir}/6xx/601/Solver601A.cpp
    ${solvers_dir}/6xx/603/Solver603A.cpp
    ${solvers_dir}/6xx/603/Solver603B.cpp
    ${solvers_dir}/6xx/603/Solver603C.cpp
    ${solvers_dir}/6xx/604/Solver604A.cpp
    ${solvers_dir}/6xx/604/Solver604B.cpp
    ${solvers_dir}/6xx/605/Solver605A.cpp
    ${solvers_dir}/6xx/605/Solver605B.cpp
    ${solvers_dir}/6xx/605/Solver605C.cpp
    ${solvers_dir}/6xx/606/Solver606A.cpp
    ${solvers_dir}/6xx/608/Solver608A.cpp
    ${solvers_dir}/6xx/608/Solver608B.cpp
    ${solvers_dir}/6xx/609/Solver609A.cpp
    ${solvers_dir}/6xx/609/Solver609B.cpp
    ${solvers_dir}/6xx/609/Solver609C.cpp
    ${solvers_dir}/6xx/610/Solver610A.cpp
    ${solvers_dir}/6xx/610/Solver610B.cpp
    ${solvers_dir}/6xx/610/Solver610C.cpp
    ${solvers_dir}/6xx/611/Solver611A.cpp
    ${solvers_dir}/6xx/611/Solver611B.cpp
    ${solvers_dir}/6xx/611/Solver611C.cpp
    ${solvers_dir}/6xx/611/Solver611D.cpp
    ${solvers_dir}/6xx/611/Solver611E.cpp
    ${solvers_dir}/6xx/611/Solver611F.cpp
    ${solvers_dir}/6xx/612/Solver612A.cpp
    ${solvers_dir}/6xx/612/Solver612B.cpp
    ${solvers_dir}/6xx/612/Solver612C.cpp
    ${solvers_dir}/6xx/612/Solver612D.cpp
    ${solvers_dir}/6xx/612/Solver612E.cpp
    ${solvers_dir}/6xx/613/Solver613A.cpp
    ${solvers_dir}/6xx/613/Solver613B.cpp
    ${solvers_dir}/6xx/613/Solver613C.cpp
    ${solvers_dir}/6xx/615/Solver615A.cpp
    ${solvers_dir}/6xx/615/Solver615B.cpp
    ${solvers_dir}/6xx/615/Solver615C.cpp
    ${solvers_dir}/6xx/615/Solver615D.cpp
    ${solvers_dir}/6xx/615/Solver615E.cpp
    ${solvers_dir}/6xx/616/Solver616A.cpp
    ${solvers_dir}/6xx/616/Solver616B.cpp
    ${solvers_dir}/6xx/616/Solver616C.cpp
    ${solvers_dir}/6xx/616/Solver616D.cpp
    ${solvers_dir}/6xx/616/Solver616E.cpp
    ${solvers_dir}/6xx/617/Solver617A.cpp
    ${solvers_dir}/6xx/617/Solver617B.cpp
    ${solvers_dir}/6xx/617/Solver617C.cpp
    ${solvers_dir}/6xx/617/Solver617D.cpp
    ${solvers_dir}/6xx/617/Solver617E.cpp
    ${solvers_dir}/6xx/618/Solver618A.cpp
    ${solvers_dir}/6xx/618/Solver618B.cpp
    ${solvers_dir}/6xx/618/Solver618C.cpp
    ${solvers_dir}/6xx/618/Solver618D.cpp
    ${solvers_dir}/6xx/618/Solver618E.cpp
    ${solvers_dir}/6xx/620/Solver620B.cpp
    ${solvers_dir}/6xx/620/Solver620C.cpp
    ${solvers_dir}/6xx/620/Solver620D.cpp
    ${solvers_dir}/6xx/620/Solver620E.cpp
    ${solvers_dir}/6xx/621/Solver621A.cpp
    ${solvers_dir}/6xx/621/Solver621B.cpp
    ${solvers_dir}/6xx/621/Solver621C.cpp
    ${solvers_dir}/6xx/621/Solver621D.cpp
    ${solvers_dir}/6xx/621/Solver621E.cpp
    ${solvers_dir}/6xx/622/Solver622A.cpp
    ${solvers_dir}/6xx/622/Solver622B.cpp
    ${solvers_dir}/6xx/622/Solver622C.cpp
    ${solvers_dir}/6xx/622/Solver622D.cpp
    ${solvers_dir}/6xx/622/Solver622E.cpp
    ${solvers_dir}/6xx/622/Solver622F.cpp
    ${solvers_dir}/6xx/623/Solver623A.cpp
    ${solvers_dir}/6xx/623/Solver623B.cpp
    ${solvers_dir}/6xx/623/Solver623C.cpp
    ${solvers_dir}/6xx/623/Solver623D.cpp
    ${solvers_dir}/6xx/624/Solver624A.cpp
    ${solvers_dir}/6xx/624/Solver624B.cpp
    ${solvers_dir}/6xx/625/Solver625A.cpp
    ${solvers_dir}/6xx/625/Solver625B.cpp
    ${solvers_dir}/6xx/625/Solver625C.cpp
    ${solvers_dir}/6xx/625/Solver625D.cpp
    ${solvers_dir}/6xx/626/Solver626A.cpp
    ${solvers_dir}/6xx/626/Solver626B.cpp
    ${solvers_dir}/6xx/626/Solver626C.cpp
    ${solvers_dir}/6xx/626/Solver626D.cpp
    ${solvers_dir}/6xx/629/Solver629A.cpp
    ${solvers_dir}/6xx/627/Solver627A.cpp
    ${solvers_dir}/6xx/627/Solver627B.cpp
    ${solvers_dir}/6xx/627/Solver627C.cpp
    ${solvers_dir}/6xx/629/Solver629B.cpp
    ${solvers_dir}/6xx/629/Solver629C.cpp
    ${solvers_dir}/6xx/629/Solver629D.cpp
    ${solvers_dir}/6xx/629/Solver629E.cpp
    ${solvers_dir}/6xx/630/Solver630A.cpp
    ${solvers_dir}/6xx/630/Solver630B.cpp
    ${solvers_dir}/6xx/630/Solver630C.cpp
    ${solvers_dir}/6xx/630/Solver630D.cpp
    ${solvers_dir}/6xx/630/Solver630E.cpp
    ${solvers_dir}/6xx/630/Solver630F.cpp
    ${solvers_dir}/6xx/630/Solver630G.cpp
    ${solvers_dir}/6xx/630/Solver630H.cpp
    ${solvers_dir}/6xx/630/Solver630I.cpp
    ${solvers_dir}/6xx/630/Solver630J.cpp
    ${solvers_dir}/6xx/630/Solver630K.cpp
    ${solvers_dir}/6xx/630/Solver630L.cpp
    ${solvers_dir}/6xx/630/Solver630M.cpp
    ${solvers_dir}/6xx/630/Solver630N.cpp
    ${solvers_dir}/6xx/630/Solver630O.cpp
    ${solvers_dir}/6xx/630/Solver630P.cpp
    ${solvers_dir}/6xx/630/Solver630Q.cpp
    ${solvers_dir}/6xx/630/Solver630R.cpp
    ${solvers_dir}/6xx/631/Solver631A.cpp
    ${solvers_dir}/6xx/631/Solver631B.cpp
    ${solvers_dir}/6xx/631/Solver631C.cpp
    ${solvers_dir}/6xx/631/Solver631D.cpp
    ${solvers_dir}/6xx/632/Solver632A.cpp
    ${solvers_dir}/6xx/632/Solver632B.cpp
    ${solvers_dir}/6xx/632/Solver632C.cpp
    ${solvers_dir}/6xx/632/Solver632D.cpp
    ${solvers_dir}/6xx/632/Solver632E.cpp
    ${solvers_dir}/6xx/633/Solver633A.cpp
    ${solvers_dir}/6xx/633/Solver633B.cpp
    ${solvers_dir}/6xx/633/Solver633C.cpp
    ${solvers_dir}/6xx/633/Solver633D.cpp
    ${solvers_dir}/6xx/633/Solver633G.cpp
    ${solvers_dir}/6xx/634/Solver634A.cpp
    ${solvers_dir}/6xx/637/Solver637A.cpp
    ${solvers_dir}/6xx/637/Solver637B.cpp
    ${solvers_dir}/6xx/637/Solver637C.cpp
    ${solvers_dir}/6xx/637/Solver637D.cpp
    ${solvers_dir}/6xx/638/Solver638A.cpp
    ${solvers_dir}/6xx/638/Solver638B.cpp
    ${solvers_dir}/6xx/638/Solver638C.cpp
    ${solvers_dir}/6xx/638/Solver638D.cpp
    ${solvers_dir}/6xx/644/Solver644A.cpp
    ${solvers_dir}/6xx/644/Solver644B.cpp
    ${solvers_dir}/6xx/644/Solver644C.cpp
    ${solvers_dir}/6xx/645/Solver645A.cpp
    ${solvers_dir}/6xx/645/Solver645B.cpp
    ${solvers_dir}/6xx/645/Solver645C.cpp
    ${solvers_dir}/6xx/645/Solver645D.cpp
    ${solvers_dir}/6xx/645/Solver645E.cpp
    ${solvers_dir}/6xx/650/Solver650A.cpp
    ${solvers_dir}/6xx/650/Solver650B.cpp
    ${solvers_dir}/6xx/650/Solver650C.cpp
    ${solvers_dir}/6xx/651/Solver651A.cpp
    ${solvers_dir}/6xx/651/Solver651B.cpp
    ${solvers_dir}/6xx/652/Solver652A.cpp
    ${solvers_dir}/6xx/652/Solver652B.cpp
    ${solvers_dir}/6xx/652/Solver652C.cpp
    ${solvers_dir}/6xx/652/Solver652D.cpp
    ${solvers_dir}/6xx/652/Solver652F.cpp
    ${solvers_dir}/6xx/653/Solver653A.cpp
    ${solvers_dir}/6xx/653/Solver653B.cpp
    ${solvers_dir}/6xx/653/Solver653C.cpp
    ${solvers_dir}/6xx/653/Solver653D.cpp
    ${solvers_dir}/6xx/653/Solver653E.cpp
    ${solvers_dir}/6xx/659/Solver659A.cpp
    ${solvers_dir}/6xx/659/Solver659B.cpp
    ${solvers_dir}/6xx/659/Solver659C.cpp
    ${solvers_dir}/6xx/659/Solver659D.cpp
    ${solvers_dir}/6xx/659/Solver659E.cpp
    ${solvers_dir}/6xx/659/Solver659F.cpp
    ${solvers_dir}/6xx/659/Solver659G.cpp
    ${solvers_dir}/6xx/660/Solver660A.cpp
    ${solvers_dir}/6xx/660/Solver660B.cpp
    ${solvers_dir}/6xx/660/Solver660C.cpp
    ${solvers_dir}/6xx/660/Solver660D.cpp
    ${solvers_dir}/6xx/660/Solver660E.cpp
    ${solvers_dir}/6xx/660/Solver660F.cpp
    ${solvers_dir}/6xx/657/Solver657A.cpp
    ${solvers_dir}/6xx/657/Solver657B.cpp
    ${solvers_dir}/6xx/657/Solver657C.cpp
    ${solvers_dir}/6xx/665/Solver665A.cpp
    ${solvers_dir}/6xx/665/Solver665B.cpp
    ${solvers_dir}/6xx/665/Solver665C.cpp
    ${solvers_dir}/6xx/665/Solver665D.cpp
    ${solvers_dir}/6xx/666/Solver666A.cpp
    ${solvers_dir}/6xx/666/Solver666B.cpp
    ${solvers_dir}/6xx/668/Solver668A.cpp
    ${solvers_dir}/6xx/668/Solver668B.cpp
    ${solvers_dir}/6xx/668/Solver668C.cpp
    ${solvers_dir}/6xx/670/Solver670A.cpp
    ${solvers_dir}/6xx/670/Solver670B.cpp
    ${solvers_dir}/6xx/670/Solver670C.cpp
    ${solvers_dir}/6xx/670/Solver670D.cpp
    ${solvers_dir}/6xx/670/Solver670E.cpp
    ${solvers_dir}/6xx/670/Solver670F.cpp
    ${solvers_dir}/6xx/671/Solver671A.cpp
    ${solvers_dir}/6xx/671/Solver671B.cpp
    ${solvers_dir}/6xx/672/Solver672A.cpp
    ${solvers_dir}/6xx/672/Solver672B.cpp
    ${solvers_dir}/6xx/674/Solver674A.cpp
    ${solvers_dir}/6xx/674/Solver674B.cpp
    ${solvers_dir}/6xx/675/Solver675A.cpp
    ${solvers_dir}/6xx/675/Solver675B.cpp
    ${solvers_dir}/6xx/675/Solver675C.cpp
    ${solvers_dir}/6xx/675/Solver675D.cpp
    ${solvers_dir}/6xx/676/Solver676A.cpp
    ${solvers_dir}/6xx/676/Solver676B.cpp
    ${solvers_dir}/6xx/676/Solver676C.cpp
    ${solvers_dir}/6xx/676/Solver676D.cpp
    ${solvers_dir}/6xx/676/Solver676E.cpp
    ${solvers_dir}/7xx/718/Solver718C.cpp
    )

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  set(tests_srcs ${tests_srcs} ${common_lib_dir}/solution_tests/increase_stack_size_in_linux.cpp)
endif ()

add_executable(codeforces ${tests_srcs})
target_link_libraries(codeforces solver_testing_utils gtest gmock algo_lib)
add_test(all_tests codeforces)

include(${solvers_dir}/16xx/1641/CMakeLists.txt)
include(${solvers_dir}/16xx/1646/CMakeLists.txt)
include(${solvers_dir}/16xx/1648/CMakeLists.txt)
include(${solvers_dir}/18xx/1837/CMakeLists.txt)

include_directories(${common_dir})
include_directories(${common_lib_dir})
include_directories(${src_dir})

add_definitions("-DLOCAL_PC -DGTEST_LANG_CXX11")
